# simpaas

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  get-simpaas  index.yaml  simpaas-0.1.0.tgz  simpaas-app-0.1.0.tgz  simpaas-bundle-0.1.0.tgz  simpaas-stack-0.1.0.tgz
.cargo/: config.toml
.config/: orbstack.yaml
.github/workflows/: chart-publish.yml  lint.yml  release.yml  rust-build.yml  rust-test.yml
api/: Cargo.toml
api/src/: main.rs
charts/simpaas/: Chart.yaml  README.md  values.yaml
charts/simpaas-app/: Chart.yaml  README.md  values.yaml
charts/simpaas-app/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/simpaas-app/templates/container/: deployment.yaml  service.yaml
charts/simpaas-application/: Chart.yaml  values.yaml
charts/simpaas-application/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/simpaas-orbstack/: Chart.yaml  values.yaml
charts/simpaas-postgresql/: Chart.yaml  values.yaml
charts/simpaas-postgresql/templates/: _helpers.tpl  secret.yaml  serviceaccount.yaml
charts/simpaas-postgresql/templates/backup/: cronjob.yaml  persistentvolumeclaim.yaml
charts/simpaas-postgresql/templates/pgpool/: deployment.yaml  service.yaml
charts/simpaas-postgresql/templates/postgresql/: configmap.yaml  secret.yaml  service.yaml  statefulset.yaml
charts/simpaas-stack/: Chart.yaml  README.md  values.yaml
charts/simpaas-stack/templates/: _helpers.tpl
charts/simpaas/crds/: app.yaml  application.yaml  database.yaml  invit.yaml  role.yaml  service-instance.yaml  service.yaml  user.yaml
charts/simpaas/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  ingress.yaml  serviceaccount.yaml
config/: local.yaml
core/: Cargo.toml
core/src/: kube.rs  lib.rs  process.rs  renderer.rs  tracer.rs
etc/: privkey.pem
examples/application/: nginx.yaml
examples/database/: postgresql.yaml
examples/service/: postgresql.yaml
examples/service-instance/: postgresql.yaml
operator/: Cargo.toml  build.rs
operator/resources/: values.yaml.liquid
operator/src/: clock.rs  cmd.rs  ctrl.rs  db.rs  err.rs  hasher.rs  helm.rs  main.rs  monitor.rs  pwd.rs  renderer.rs
operator/src/deployer/: app.rs  mod.rs  svcinst.rs
operator/src/reconciler/: db.rs  dep.rs  mod.rs
resources/main/mail/: invitation.html.liquid
sh/: gen-crds.sh  install.sh  local-install.sh
src/: api.rs  domain.rs  main.rs  op.rs
src/cmd/: default.rs  mod.rs
src/deploy/: helm.rs  mod.rs
src/helm/: cli.rs  default.rs  mod.rs
src/jwt/: default.rs  mod.rs
src/kube/: api.rs  default.rs  mod.rs
src/mail/: default.rs  mod.rs
src/pwd/: bcrypt.rs  mod.rs
tools/: docker-build-push.sh  generate-crds.sh  install-crds.sh  install-examples.sh  install.sh  orbstack-install.sh  reinstall-crds.sh
(+19 files in other folders)
