[[bin]]
name = "crds"
required-features = ["crds"]

[dependencies]
anyhow = {version = "1", optional = true}
clap = {version = "4", features = ["derive", "env"], optional = true}
enum-display = "0"
k8s-openapi = {version = "0", features = ["schemars", "v1_30"]}
kube = {version = "0", features = ["derive", "runtime"]}
liquid = "0"
mockall = {version = "0", optional = true}
schemars = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = {version = "0", optional = true}
thiserror = "1"
tokio = {version = "1", features = ["macros", "signal"]}
tracing = "0"
tracing-subscriber = {version = "0", features = ["env-filter"]}

[features]
crds = ["dep:anyhow", "dep:clap", "dep:serde_yaml"]
mock = ["dep:mockall"]

[package]
description = "SimPaaS core structs"
name = "simpaas-core"
edition.workspace = true
version.workspace = true
