[dependencies]
anyhow = "1"
chrono = "0"
clap = {version = "4", features = ["derive", "env"]}
futures = "0"
hex = "0"
k8s-openapi = {version = "0", features = ["v1_30"]}
kube = {version = "0", features = ["runtime"]}
passwords = "3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0"
sha2 = "0"
simpaas-core = {path = "../core"}
tempfile = "3"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tracing = "0"

[dev-dependencies]
mockall = "0"
simpaas-core = {path = "../core", features = ["mock"]}

[package]
description = "SimPaaS operator"
name = "simpaas-operator"
edition.workspace = true
version.workspace = true
